fixed vertical text alignment

--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -2,33 +2,39 @@
   
   aside {
     height: 600px;
+    line-height: 600px;
     width: 20.8vw;
     float: left;
   }
-
+  
   main {
     width: 79.2vw;
     float: left;
     height: 600px;
+    line-height: 600px;
   }
-
+  
   header {
     height: 100px;
+    line-height: 100px;
   }
   
   section article {
     float: left;
     /* box-sizing: border-box; */
     height: 200px;
+    line-height: 200px;
     width: 50%;
   }
   
   div div div {
     height: 250px;
+    line-height: 250px;
     width: 25%;
   }
-
+  
   footer {
     height: 150px;
+    line-height: 150px;
   }
 }
