--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -10,24 +10,29 @@ main, header, aside, section, article, div, footer {
 
 header {
   height: 75px;
+  line-height: 75px;
 }
 
 aside {
   height: 150px;
+  line-height: 150px;
 }
 
 section article {
   height: 125px;
+  line-height: 125px;
 }
 
 div div div {
   float: left;
   width: 50%;
   height: 250px;
+  line-height: 250px;
 }
 
 footer {
   clear: both;
   width: 100%;
   height: 80px;
+  line-height: 80px;
 }
